[metadata]
name = networking_f5
summary = F5 OpenStack ML2 Driver project has the Neutron ML2 mechanism driver.
description-file =
	README.rst
author = F5 Networks
classifier =
	Environment :: OpenStack
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5

[files]
packages = networking_f5

[entry_points]

neutron.ml2.mechanism_drivers =
	f5networks = networking_f5.plugins.ml2.drivers.f5.mech_f5networks_bigip:F5NetworksMechanismDriver
